--- a/Shophoto/Shophoto/Image/Thumbnail/ImageThumbnail.xaml
+++ b/Shophoto/Shophoto/Image/Thumbnail/ImageThumbnail.xaml
@@ -14,7 +14,7 @@
         <MouseBinding Gesture="LeftClick" Command="{Binding LeftClick}"></MouseBinding>
         <MouseBinding Gesture="RightClick" Command="{Binding RightClick}"></MouseBinding>
     </UserControl.InputBindings>
-    <Grid Width="200" Height="150" Background="WhiteSmoke">
+    <Grid Width="200" Height="150" Background="White">
         <Image VerticalAlignment="Center" HorizontalAlignment="Right"
                SnapsToDevicePixels="True"
                Stretch="UniformToFill"
@@ -29,7 +29,11 @@
                            Template="{StaticResource IconButtonTemplate  }"
                            Icon="{iconPacks:Modern Kind=Delete, Width=20, Height=20}"
                            Command="{Binding DeleteQuickButtonClick}"></button:IconButton>
-            <button:IconButton Visibility="{Binding HasTagQuickButton, Converter={StaticResource BoolToVisConverter}}"
+            <Grid>
+                <TextBlock VerticalAlignment="Top" HorizontalAlignment="Left"
+                           Visibility="{Binding HasTags, Converter={StaticResource BoolToVisConverter}}"
+                           Text="{Binding Tags.Count}" Margin="30,10,0,0"></TextBlock>
+                <button:IconButton Visibility="{Binding HasTagQuickButton, Converter={StaticResource BoolToVisConverter}}"
                                Width="35" Height="35"
                                BorderBrush="Transparent"
                                VerticalAlignment="Top" HorizontalAlignment="Left"
@@ -37,8 +41,10 @@
                                Template="{StaticResource IconButtonTemplate  }"
                                Icon="{iconPacks:Octicons Kind=Tag, Width=20, Height=20}"
                                Command="{Binding TagButtonClick}">
-                
-            </button:IconButton>
+
+                </button:IconButton>
+            </Grid>
+
             <button:IconButton Visibility="{Binding HasThreeDotQuickButton, Converter={StaticResource BoolToVisConverter}}"
                                Width="35" Height="35"
                                BorderBrush="Transparent"
