--- a/Shophoto/Shophoto/App.xaml
+++ b/Shophoto/Shophoto/App.xaml
@@ -12,8 +12,8 @@
         <SolidColorBrush x:Key="LightRed" Color="#ff4c4c"></SolidColorBrush>
         <SolidColorBrush x:Key="HoverRed" Color="#cc3c3c"></SolidColorBrush>
         <SolidColorBrush x:Key="SelectedBlue" Color="#257AFD"></SolidColorBrush>
-        <SolidColorBrush x:Key="SpaceBlue" Color="#314689"></SolidColorBrush>
-        <SolidColorBrush x:Key="HoverSpaceBlue" Color="#243364"></SolidColorBrush>
+        <SolidColorBrush x:Key="SpaceBlue" Color="#4965be"></SolidColorBrush>
+        <SolidColorBrush x:Key="HoverSpaceBlue" Color="#3e59af"></SolidColorBrush>
         <Style x:Key="IconButtonHoverStyle" TargetType="buttons:IconButton">
             <Setter Property="Background" Value="White"></Setter>
             <Setter Property="Opacity" Value="1"></Setter>
