--- a/Shophoto/Shophoto/App.xaml
+++ b/Shophoto/Shophoto/App.xaml
@@ -71,6 +71,34 @@
 
             </Style.Triggers>
         </Style>
+        <Style x:Key="DangerButtonStyle" TargetType="buttons:IconButton">
+            <Setter Property="Foreground" Value="White"></Setter>
+            <Setter Property="Background" Value="{StaticResource LightRed}"></Setter>
+            <Setter Property="Opacity" Value="1"></Setter>
+            <Style.Triggers>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter Property="Background" Value="{StaticResource LightRed}"></Setter>
+                    <Setter Property="Opacity" Value=".6"></Setter>
+                </Trigger>
+                <Trigger Property="IsMouseOver"  Value="True">
+                    <Setter Property="Background" Value="{StaticResource HoverRed}"></Setter>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+        <Style x:Key="PositiveButtonStyle" TargetType="buttons:IconButton">
+            <Setter Property="Foreground" Value="White"></Setter>
+            <Setter Property="Background" Value="{StaticResource SpaceBlue}"></Setter>
+            <Setter Property="Opacity" Value="1"></Setter>
+            <Style.Triggers>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter Property="Background" Value="{StaticResource SpaceBlue}"></Setter>
+                    <Setter Property="Opacity" Value=".6"></Setter>
+                </Trigger>
+                <Trigger Property="IsMouseOver"  Value="True">
+                    <Setter Property="Background" Value="{StaticResource HoverSpaceBlue}"></Setter>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
         <Style x:Key="ListViewItemStyle"  TargetType="ListViewItem">
             <Setter Property="Background" Value="Transparent" />
             <Setter Property="Template">
