--- a/Shophoto/Shophoto/Views/Projects/AuxView/CreateProject.xaml
+++ b/Shophoto/Shophoto/Views/Projects/AuxView/CreateProject.xaml
@@ -8,61 +8,67 @@
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              xmlns:input="clr-namespace:Shophoto.InputBox"
              mc:Ignorable="d" >
-    <StackPanel Width="815" Height="680" Background="WhiteSmoke" Margin="0,0,0,0">
-        <StackPanel Orientation="Horizontal" Margin="0,50,0,0">
-            <buttons:IconButton Width="40" Height="40" 
-                            Icon="{iconPacks:Octicons Kind=ChevronLeft, Width=30, Height=30}"
-                            Background="Transparent" BorderBrush="Transparent"
-                            VerticalAlignment="Top" HorizontalAlignment="Left"
-                            Margin="60,45,0,10"
-                            Template="{StaticResource IconButtonTemplate}"
-                            Style="{StaticResource IconButtonHoverStyle}"
-                            Command="{Binding GoBackCommand}">
-            </buttons:IconButton>
-            <TextBlock Height="50" Padding="55,0,0,0" Margin="0,40,0,10" FontSize="35">
+    <Grid>
+        <Grid Background="Black" Opacity=".5">
+            <Grid.InputBindings>
+                <MouseBinding Gesture="LeftClick" Command="{Binding CloseCommand}"></MouseBinding>
+            </Grid.InputBindings>
+        </Grid>
+        <Grid Width="520" Height="490" Background="WhiteSmoke">
+            <StackPanel Width="520" Height="490" Background="WhiteSmoke" Margin="0,0,0,0">
+                <StackPanel Orientation="Horizontal" Margin="0,0,0,0">
+                    <TextBlock Height="45" Margin="20,30,0,10" FontSize="30">
                     Create a new project</TextBlock>
-        </StackPanel>
-        
-        <Border BorderBrush="Black" BorderThickness="0,2,0,0"
-                        Height="500" Width="700">
-            <StackPanel>
-                <StackPanel Width="680" Height="480" Margin="0,10,0,0">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Background="Transparent" VerticalAlignment="Top"
-                                   Height="40" Width="250" FontSize="25" >Project Name</TextBlock>
-                        <input:InputBox Width="380" Margin="50,0,0,0"
-                                        DataContext="{Binding ProjectNameInputBoxVM}"></input:InputBox>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal" >
-                        <TextBlock Background="Transparent" VerticalAlignment="Top" 
-                                 Height="40" Width="250" FontSize="25">Project Summary</TextBlock>
-                        <input:InputBox Width="380" Height="150" Margin="50,20,0,0"
-                                        DataContext="{Binding ProjectSummaryInputBoxVM}">
-                        </input:InputBox>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
-                        <TextBlock Background="Transparent" 
-                                   Height="40" Width="300" FontSize="25">Customer Name</TextBlock>
-                        <input:InputBox DataContext="{Binding CustomerNameInputBoxVM}"  Width="380"></input:InputBox>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
-                        <TextBlock Background="Transparent" 
-                                   Height="40" Width="300" FontSize="25">Customers Email Address</TextBlock>
-                        <input:InputBox DataContext="{Binding EmailInputBoxVM}" Width="380"></input:InputBox>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal" Height="50" Margin="0,20,0,0" VerticalAlignment="Center">
-                        <buttons:IconButton Content="Create" Margin="530,0,0,0" FontSize="30" Height="50" Width="150" VerticalAlignment="Center"
-                                            BorderBrush="Black" BorderThickness="2"
-                                            IsEnabled="{Binding CanCreateProject}"
-                                            Template="{StaticResource IconButtonTemplate}"
-                                            Style="{StaticResource IconButtonHoverStyle}"
-                                            Command="{Binding CreateProjectCommand}">
-                        </buttons:IconButton>
-                    </StackPanel>
                 </StackPanel>
 
-                
+                <Border BorderBrush="Black" BorderThickness="0,2,0,0">
+                    <StackPanel>
+                        <StackPanel Width="480" Height="343" Margin="0,20,0,0">
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Background="Transparent" VerticalAlignment="Top"
+                                   Height="40" Width="170" FontSize="15" >Project Name</TextBlock>
+                                <input:InputBox Width="260" Margin="50,0,0,0"
+                                        DataContext="{Binding ProjectNameInputBoxVM}"></input:InputBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                                <TextBlock Background="Transparent" 
+                                   Height="40" Width="170" FontSize="15">Customer Name</TextBlock>
+                                <input:InputBox Margin="50,0,0,0" DataContext="{Binding CustomerNameInputBoxVM}"  Width="260"></input:InputBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                                <TextBlock Background="Transparent" 
+                                   Height="40" Width="170" FontSize="15">Customers Email Address</TextBlock>
+                                <input:InputBox Margin="50,0,0,0" DataContext="{Binding EmailInputBoxVM}" Width="260"></input:InputBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                                <TextBlock Background="Transparent" VerticalAlignment="Top" 
+                                 Height="40" Width="185" FontSize="15">Project Summary (optional)</TextBlock>
+                                <input:InputBox Margin="35,0,0,0" Width="260" Height="150"
+                                        DataContext="{Binding ProjectSummaryInputBoxVM}">
+                                </input:InputBox>
+                            </StackPanel>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                            <buttons:IconButton Content="Cancel" Height="40" FontSize="15" Width="260" 
+                                            BorderThickness="0"
+                                            Command="{Binding CloseCommand}"
+                                            Template="{StaticResource IconButtonTemplate}"
+                                            Style="{StaticResource IconButtonGrayHoverStyle}"></buttons:IconButton>
+                            <buttons:IconButton Content="Create Project" Height="40" FontSize="15" Width="260"
+                                            BorderThickness="0"
+                                            IsEnabled="{Binding CanCreateProject}"
+                                            Command="{Binding CreateProjectCommand}"
+                                            Template="{StaticResource IconButtonTemplate}"
+                                            Style="{StaticResource PositiveButtonStyle}">
+
+                            </buttons:IconButton>
+                        </StackPanel>
+
+                    </StackPanel>
+                </Border>
             </StackPanel>
-        </Border>
-    </StackPanel>
+        </Grid>
+    </Grid>
+    
+   
 </UserControl>
